# UniforApi

./: .coverage  README.md  pyproject.toml
tests/: test_client.py
uniforapi/: __init__.py  unifor.py
uniforapi/api/: notas.py
uniforapi/authentication/: constants.py  requester.py
uniforapi/examples/: exemple.py
uniforapi/models/: token.py
