[tool.poetry]
name = "uniforapi"
version = "0.1.0"
description = ""
authors = ["Stuffxd <pedox@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.5"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath='.'
addopts='-p no:warnings'

[tool.taskipy.tasks]
run = 'python uniforapi/exemple.py'

pre_test = 'task lint'
test = 'pytest --cov=uniforapi -vv'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
